<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <!-- <include layout="@layout/include_header" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:textColor="@color/lighttext"
            android:text="@string/choose_method" />
        <Spinner
            android:id="@+id/methods_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/methods_array"
            android:prompt="@string/choose_method" >
        </Spinner>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:textColor="@color/lighttext"
            android:text="@string/choose_dataset" />
        <Spinner
            android:id="@+id/dataset_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/dataset_array"
            android:prompt="@string/choose_dataset" >
        </Spinner>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:elevation="5dp"
        android:textColor="@color/lighttext"
        android:text="@string/info" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:textColor="@color/lighttext"
        android:text="@string/status_header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickStartMyService"
            android:text="@string/button_start" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="onClickStopMyService"
            android:text="@string/button_stop" />
    </LinearLayout>

    <include layout="@layout/include_footer" />

</LinearLayout>